align key in header and fixing css/h (register page)

--- a/web/design/css/db_style.css
+++ b/web/design/css/db_style.css
@@ -517,6 +517,11 @@ body {
         display: none;
     }
 
+    .dashboard .logoYellow {
+        width: 150px;
+        margin: 0 auto;
+    }
+
 }
 
 @media (min-width: 992px) and (max-width: 1399px) {
