--- a/web/design/css/depositPopup.css
+++ b/web/design/css/depositPopup.css
@@ -1,30 +1,35 @@
 /***************common styles**************************/
-input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus, select.select-register:focus {
+.deposit-popup input[type="text"]:focus,
+.deposit-popup input[type="email"]:focus,
+.deposit-popup input[type="password"]:focus,
+.deposit-popup select.select-register:focus {
     border: 2px solid #21c0ac;
     outline: none;
     color: #21c0ac;
     border-radius: 0;
 }
 
-.modal-dialog {
-    width: 690px;
-}
-
-label {
+.deposit-popup label {
     display: inline-block;
-    width: 150px;
+    width: 140px;
     margin-bottom: 5px;
     font-weight: 700;
     border-radius: 4px;
     position: relative;
 }
 
-.modal .modal-dialog {
+.deposit-popup .modal-header {
+    border-bottom: none;
+}
+
+.deposit-popup .modal-dialog {
     position: absolute;
+    margin: 0;
     top: 50%;
     left: 50%;
     bottom: auto;
     right: auto;
+    width: 690px;
     -webkit-transform: translate(-50%, -50%) !important;
     -moz-transform: translate(-50%, -50%) !important;
     -ms-transform: translate(-50%, -50%) !important;
@@ -32,18 +37,14 @@ label {
     transform: translate(-50%, -50%) !important;
 }
 
-body {
+body .deposit-popup {
     font-family: 'Montserrat', sans-serif;
 }
 
-.vcenter {
+.deposit-popup .vcenter {
     display: inline-block;
     vertical-align: middle;
     float: none;
-}
-
-.modal-header {
-    border-bottom: none;
 }
 
 /*********************************login popup************************************/
@@ -67,17 +68,17 @@ body {
     padding: 65px 65px 160px 65px;
 }
 
-.modal-content label {
+.deposit-popup .modal-content label {
     background: -webkit-linear-gradient(left, #06b6a4 0%,#27b378 100%);
     background: -moz-linear-gradient(left, #06b6a4 0%, #27b378 100%);
     background: linear-gradient(to right, #06b6a4 0%,#27b378 100%);
 }
 
-.deposit-video {
+.deposit-popup .deposit-video {
     width: 100%;
 }
 
-.deposit-play {
+.deposit-popup .deposit-play {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -103,7 +104,7 @@ body {
     outline: none;
 }
 
-.modal-content .deposit-text-grey {
+.deposit-popup .modal-content .deposit-text-grey {
     color: #ababab;
     font-size: 18px;
     letter-spacing: 2px;
@@ -118,7 +119,7 @@ body {
     border-radius: 2px;
 }
 
-.dailyAverage {
+.deposit-popup .dailyAverage {
     color: #ababab;
     font-size: 18px !important;
     letter-spacing: 1px;
@@ -127,16 +128,16 @@ body {
     line-height: 1px !important;
 }
 
-.leftArrow {
+.deposit-popup .leftArrow {
     position: absolute;
-    left: 6%;
+    left: 12%;
     top: 50%;
     transform: translate(-50%, -50%);
 }
 
-.rightArrow {
+.deposit-popup .rightArrow {
     position: absolute;
-    right: 0;
+    right: 7%;
     top: 50%;
     transform: translate(-50%, -50%);
 }
@@ -147,6 +148,7 @@ body {
 
 .deposit-popup .ui-slider-horizontal {
     height: .4em;
+    margin-left: 8%;
 }
 
 .deposit-popup .ui-slider-horizontal .ui-slider-range {
@@ -156,7 +158,6 @@ body {
 .deposit-popup .ui-slider-handle {
     position: absolute;
     z-index: 2;
-    width: 9.2em;
     height: 2.2em;
     cursor: default;
     margin: 0 -10px auto -45px;
@@ -164,6 +165,10 @@ body {
     line-height: 38px;
     color: #FFFFFF;
     font-size: 18px;
+}
+
+.deposit-popup .second-slider a {
+    margin: 0 -20px auto -20px;
 }
 
 .deposit-popup .ui-slider .ui-slider-range {
@@ -179,22 +184,21 @@ body {
     margin-top: 15%;
 }
 
-.deposit-popup .set-deposit {
+.deposit-popup .set-deposit, .deposit-popup .set-risk {
     margin-bottom: 5%;
 }
 
-.profit-per-day {
+.deposit-popup .profit-per-day {
     margin-top: 16%;
 }
 
-.profit-per-day span {
+.deposit-popup .profit-per-day span {
     color: #2bbc98;
 }
 
-.second-slider label {
+.deposit-popup .second-slider label {
     width: 80px;
 }
-
 
 .deposit-popup button {
     background-repeat: no-repeat;
@@ -210,7 +214,7 @@ body {
     background: linear-gradient(to right, #06b6a4 0%,#27b378 100%);
     color: white;
     font-weight: bold;
-    margin: 5% auto;
+    margin: 4% auto;
     width: 75%;
     font-size: 1em;
     display: block;
@@ -220,10 +224,6 @@ body {
 .deposit-popup button .row {
     margin: 20px 0;
     position: relative;
-}
-
-.deposit-popup button .row .arrow {
-    right: 20px;
 }
 
 .deposit-popup button .row .arrow img {
@@ -245,19 +245,51 @@ body {
 
 /**************************mobiles, tablets (login popup)*************************/
 
-@media (max-width: 991px) {
-
-    .modal-dialog {
-        margin-top: 100px;
-        margin: 100px auto 0 auto;
+@media (min-width: 992px) and (max-width: 1799px) {
+    .deposit-popup .modal-content {
+        padding: 30px 65px 100px 65px;
     }
 
-    .modal-dialog {
+    .deposit-popup .profit-per-day {
+        margin-top: 13%;
+    }
+}
+
+@media (max-width: 991px) {
+
+    .deposit-popup .modal-dialog {
         width: 70%;
     }
 
+    .deposit-popup .modal-content {
+        border: none;
+        border-radius: 0;
+        padding: 10px 65px 100px 65px;
+    }
+
+    .deposit-popup .set-risk, .deposit-popup .set-deposit {
+        margin-bottom: 10%;
+    }
+
+    .deposit-popup .second-slider label {
+        width: 70px;
+    }
+
+    .deposit-popup .set-risk {
+        margin-top: 20%;
+    }
+
+    .deposit-popup label {
+        display: inline-block;
+        width: 100px;
+    }
+
+    .deposit-popup .ui-slider-horizontal .ui-slider-handle {
+        top: -.9em;
+    }
+
     .deposit-popup button .row {
-        margin: 20px 0;
+        margin: 2px 0;
     }
 
     .deposit-popup .login-lower-arrow {
@@ -273,16 +305,32 @@ body {
     .deposit-popup .login-form button {
         width: 53%;
     }
+
+    .deposit-popup .dailyAverage {
+        line-height: 18px !important;
+    }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 539px) {
 
-    .modal-dialog {
+    .deposit-popup .modal-content {
+        padding: 15px 65px 100px 65px;
+    }
+
+    .deposit-popup .modal-dialog {
         width: 100%;
     }
 
     .deposit-popup .login-form button {
         width: 80%;
+    }
+
+    .deposit-popup .dailyAverage {
+        line-height: 15px !important;
+    }
+
+    .deposit-popup button {
+        width: 100%;
     }
 
 }
